[gd_scene load_steps=4 format=3 uid="uid://0mvyc4vre5wy"]

[ext_resource type="Script" path="res://Scenes/menu.gd" id="1_8jydr"]
[ext_resource type="Texture2D" uid="uid://ob6qvhveao76" path="res://Assets/Background.png" id="2_bha2r"]
[ext_resource type="FontFile" uid="uid://yckt2g0lqvmo" path="res://Assets/Font/ThaleahFat.ttf" id="3_udtnv"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8jydr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, -213)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_bha2r")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -181.5
offset_top = -232.0
offset_right = 181.5
offset_bottom = -159.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_udtnv")
theme_override_font_sizes/font_size = 54
text = "Árvore da vida"
horizontal_alignment = 1

[node name="Title2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -252.0
offset_top = -154.0
offset_right = 261.0
offset_bottom = -112.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_udtnv")
theme_override_font_sizes/font_size = 30
text = "uma abordagem científica ilustrada"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -25.0
offset_right = 40.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_udtnv")
theme_override_font_sizes/font_size = 26
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_udtnv")
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_udtnv")
theme_override_font_sizes/font_size = 24
text = "Credits
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_udtnv")
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="CreditsPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 323.0
offset_top = -250.0
offset_right = 823.0
offset_bottom = 250.0

[node name="Sprite2D" type="Sprite2D" parent="CreditsPanel"]
self_modulate = Color(0.329412, 0.329412, 0.329412, 1)
position = Vector2(253, 37)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_bha2r")

[node name="Label" type="Label" parent="CreditsPanel"]
layout_mode = 0
offset_left = 148.0
offset_top = 1.0
offset_right = 368.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("3_udtnv")
theme_override_font_sizes/font_size = 54
text = "Credits"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CreditsPanel"]
layout_mode = 0
offset_left = -4.0
offset_top = 83.0
offset_right = 520.0
offset_bottom = 427.0
theme_override_fonts/font = ExtResource("3_udtnv")
theme_override_font_sizes/font_size = 24
text = "Developers
Matheus Juan Alarcon Sampaio
Vinicius Kuwakino

Theoretical foundation
HICKMAN, Cleveland P. et al. Integrated principles
of zoology. New York: McGraw-Hill, 2016.

Image rights
Canva. Disponível em: https://www.canva.com/. 
Acesso em: 22 mai. 2024.
Itch.io. Disponível em: https://itch.io/game-assets. 
Acesso em: 22 mai. 2024."
horizontal_alignment = 1

[node name="ReturnMenu" type="Button" parent="CreditsPanel"]
layout_mode = 0
offset_left = 207.0
offset_top = 450.0
offset_right = 307.0
offset_bottom = 490.0
theme_override_fonts/font = ExtResource("3_udtnv")
theme_override_font_sizes/font_size = 24
text = "Return"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CreditsPanel/ReturnMenu" to="." method="_on_return_menu_pressed"]
